# rconsole

./: .gitignore  Cargo.toml  LICENSE  README.md
coder-package/inst/benchmarks/empirical_pilot_bypass/runs/pilot_bypass_001/codexr_assisted/cleaning/: answer.csv  solution.R
coder-package/inst/benchmarks/empirical_pilot_bypass/runs/pilot_bypass_001/codexr_assisted/factor_model/: answer.csv  solution.R
src/: lib.rs  main.rs
src/app/: commands.rs  mod.rs  router.rs  state.rs
src/chat/: backend.rs
src/codex/: detect.rs  runner.rs
src/config/: mod.rs  root.rs
src/context/: mod.rs
src/r/: artifacts.rs  mod.rs  protocol.rs  session.rs
src/transcript/: mod.rs
